<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentacion.MainAddVendedor">

    <EditText
        android:id="@+id/txtcelular"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="325dp"
        android:ems="10"
        android:hint="@string/txtcelular"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleaddcliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="206dp"
        android:text="@string/titleaddcliente"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombrecliente"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="139dp"
        android:ems="10"
        android:hint="@string/txtnombrecliente"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnguardarVendedor"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btnguardarCategoria"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnvolverVendedor"
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btnvolverCategoria"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnguardarVendedor"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="140dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vendedor"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/txtubicacion"
        android:layout_width="288dp"
        android:layout_height="94dp"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtubicacion"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

