<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentacion.MainAddProducto">


    <Button
        android:id="@+id/btnaddimage"
        android:layout_width="259dp"
        android:layout_height="39dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="92dp"
        android:text="@string/btnaddimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleaddproducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="206dp"
        android:text="@string/titleaddproducto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombreproducto"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="139dp"
        android:ems="10"
        android:hint="@string/txtnombreproducto"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnguardarProducto"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnguardarCategoria"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtdescripcion"
        android:layout_width="285dp"
        android:layout_height="72dp"
        android:layout_marginBottom="420dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtdescripcion"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageDeProducto"
        android:layout_width="234dp"
        android:layout_height="166dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgsproducto" />

    <EditText
        android:id="@+id/txtprecio"
        android:layout_width="281dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="504dp"
        android:ems="10"
        android:hint="@string/txtprecio"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spProducto"
        android:layout_width="291dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatVolverAddProducto"
        android:layout_width="82dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:backgroundTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="388dp"
        android:text="Seleccionar Categoria"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

